--- a/views/cart.html
+++ b/views/cart.html
@@ -4,10 +4,7 @@
         <div class="col-10">
   
           <div class="d-flex justify-content-between align-items-center mb-4">
-            <h3 class="fw-normal mb-0">Shopping Cart</h3>
-            <div>
-              <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!" class="text-body">price <i class="fas fa-angle-down mt-1"></i></a></p>
-            </div>
+            <h3 class="fw-normal mb-0">Carrinho de Compras</h3>
           </div>
           {loop="$products"}
           <div class="card rounded-3 mb-4">
@@ -15,41 +12,41 @@
               <div class="row d-flex justify-content-between align-items-center">
                 <div class="col-md-3 col-lg-3 col-xl-3">
                   <p class="lead fw-normal mb-2">{$value.name}</p>
+ 
+                  <small>{$value.description}</small>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                  <button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-link px-2" onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                    <i class="fas fa-minus"></i>
+                  <button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-danger" onclick="window.location.href = '/cart/{$value.id}/minus'">
+                    <i class="fas fa-minus">-</i>
                   </button>
-  
-                  <input id="form1" min="0" name="quantity" value="2" type="number" class="form-control form-control-sm">
-  
-                  <button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-link px-2" onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                    <i class="fas fa-plus"></i>
+                  &nbsp;
+                  <input id="form1" min="0" name="quantity" value="{$value.quantity}" type="number" class="form-control form-control-sm">
+                  &nbsp;
+                  <button data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-success" onclick="window.location.href = '/cart/{$value.id}/addFromCart'">
+                    <i class="fas fa-plus">+</i>
                   </button>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                  <h5 class="mb-0">R${$value.price}</h5>
+                  <h5 class="mb-0">R${$value.subtotal_price}</h5>
                 </div>
                 <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                  <a href="/cart/{$value.id}/minus" class="text-danger">Remover<i class="fas fa-trash fa-lg"></i></a>
+                  <a href="/cart/{$value.id}/remove" class="text-danger">Remover<i class="fas fa-trash fa-lg"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          {/loop}
-          
-  
-          
-  
-          
-  
-          
-  
+          {/loop}  
+
+          {loop="$products"}
           <div class="card">
-            <div class="card-body">
-              <button type="button" data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button>
+            <div style="display: flex; justify-content:space-between" class="card-body">
+              <button type="button" data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-warning btn-block btn-lg">Pagar</button>
+              <div>
+                <span>            <p>Total: <b>R${$value.total_cart_price}</b></p></span>
+              </div>
             </div>
           </div>
+          {/loop}
   
         </div>
       </div>
